Avance en el viewmodel y creacion de la vista MenuRecetasPage

--- a/RecetasMAUI/RecetasMAUI.csproj
+++ b/RecetasMAUI/RecetasMAUI.csproj
@@ -62,4 +62,10 @@
 		<PackageReference Include="Pomelo.EntityFrameworkCore.Mysql" Version="9.0.0" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <MauiXaml Update="Views\MenuRecetasPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	</ItemGroup>
+
 </Project>
